--- a/webapp/view/CustomObject.view.xml
+++ b/webapp/view/CustomObject.view.xml
@@ -6,48 +6,29 @@
 
     <Page showHeader="false" class="sapUiSizeCompact">
 
-        <OverflowToolbar>
-            <Button icon="sap-icon://save" text="Save as variant" tooltip="Save as variant" />
-            <Button icon="sap-icon://course-book" tooltip="Get variant" />
-            <MenuButton text="more" tooltip="more">
-                <menu>
-                    <Menu itemSelected="onItemSelect1">
-                        <MenuItem text="Execute and Print" />
-                        <MenuItem text="Cancel" />
-                    </Menu>
-                </menu>
-            </MenuButton>
-            <ToolbarSpacer/> 
-            <Button text="Exit" />
-        </OverflowToolbar>
-
-
         <VBox class="bigBlackBox">
-        <Title text="Upgrade Conflicts" level="H2" textAlign="Left" />
+        <Title text="Upgrade Conflicts" level="H3"/>
             <f:SimpleForm
-                editable="true"
-                layout="ResponsiveGridLayout"
-                adjustLabelSpan="true"
-            >
+                editable="true">
 
                 <Label text="Application" />
                 <HBox>
                     <Input width="40%" />
-                    <Label text="to:" width="40%" textAlign="Center" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>
-                    <Input width="40%"/>
-                    <Button icon="sap-icon://begin" type="Neutral" width="40%" tooltip="Multiple Selection"/>
+                    <!-- <Label text="to:" width="40%" textAlign="Center" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>
+                    <Input width="40%"/> -->
+                    <!-- <Button icon="sap-icon://begin" type="Neutral" width="40%" tooltip="Multiple Selection"/> -->
                 </HBox>
 
                 <Label text="Program Name" />
                 <HBox>
                     <Input width="90%" />
-                    <Button icon="sap-icon://begin" type="Neutral" tooltip="Multiple Selection" width="40%"/>
+                    <!-- <Button icon="sap-icon://begin" type="Neutral" tooltip="Multiple Selection" width="40%"/> -->
                 </HBox>
 
                 <Label text="Package Name" />
                 <HBox>
                     <Input width="90%" />
-                    <Button icon="sap-icon://begin" type="Neutral" tooltip="Multiple Selection" width="40%"/>
+                    <!-- <Button icon="sap-icon://begin" type="Neutral" tooltip="Multiple Selection" width="40%"/> -->
                 </HBox>
 
                 <Label text="Path" />
